	* BUGFIX - Planar TIFF files with alpha now load properly
	* BUGFIX - Transparency in indexed TGA files is now read properly
	* BUGFIX - Failed operations now do not flag image as modified
	* BUGFIX - Gradient colours are now properly updated after converting indexed image to RGB
	* BUGFIX - Builtin file selector now properly handles manual edits in directory box

3.31	2009-4-15

	* Japanese translation updated by Norihiro YONEDA
	* Swedish translation updated by Daniel Nylander and Fredrik Forsmo
	* French translation updated by Plume
	* Builtin file selector uses stock file and directory icons on GTK+2
	* Default settings are loaded from file /etc/mtpaint/mtpaintrc if it exists
	* BUGFIX - Compilation with GTK+ colour selector now works
	* BUGFIX - Escape key now works properly in builtin file selector in GTK+1
	* BUGFIX - Filename length in builtin file selector no longer is limited to 100 characters
	* BUGFIX - Resizing the canvas window now doesn't cause polygon marquee to slide out of place
	* BUGFIX - Polygon marquee shrunk by resizing the canvas is now redrawn properly
	* BUGFIX - Problem with message windows not responding to mouse in some cases is now eliminated

3.30	2009-2-12

	* Chinese (Simplified) translation updated by Cecc
	* Dutch translation added by Hans Strijards
	* Italian translation added by Angelo Gemmi
	* Swedish translation added by Daniel Nylander
	* Spanish translation updated by Miguel Anxo Bouzada, Francisco Jose Rey
	* Galician translation updated by Miguel Anxo Bouzada
	* Czech translation updated by Martin Petricek
	* French translation updated by Johan Serre
	* Portuguese translation updated by Tiago Silva
	* Turkish translation updated by Tutku Dalmaz
	* Russian translation updated
	* New colour picker (old one available as configure option)
	* New file picker (old one available as configure option)
	* Some menu items can have an icon (if set in the preferences)